[gd_scene load_steps=4 format=3 uid="uid://7btbfxepo38m"]

[ext_resource type="PackedScene" uid="uid://swgu7wlvgbpy" path="res://src/expand container button/expand_container.tscn" id="1_n0p7g"]
[ext_resource type="Script" path="res://src/views/view/view.gd" id="1_x2v5l"]
[ext_resource type="PackedScene" uid="uid://bfmvdxfv4onsh" path="res://src/table/table.tscn" id="3_toqgn"]

[node name="view" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x2v5l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="expand_container" parent="VBoxContainer" instance=ExtResource("1_n0p7g")]
visible = false
layout_mode = 2

[node name="main_cont" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="table" parent="VBoxContainer/main_cont" instance=ExtResource("3_toqgn")]
layout_mode = 2

[connection signal="request_expand" from="VBoxContainer/expand_container" to="." method="_on_expand_container_request_expand"]
